syntax = "proto3";

package challenge;

///// Auth Service

service AuthService {
  rpc signIn(SignInInput) returns (SignInOutput) {}
  rpc signUp(SignUpInput) returns (SignUpOutput) {}
  rpc verifyUser(VerifyUserRequest) returns (VerifyUserResponse) {}
}

message VerifyUserRequest {
    required string access_token = 1;
}

message VerifyUserResponse {
    required string id = 1; 
}

message SignUpInput {
  required string email = 1;
  required string password = 2;
}

message SignInInput {
  required string email = 1;
  required string password = 2;
}

message SignUpOutput {
    required string id = 1;
}

message SignInOutput {
    required string access_token = 1;
}


///// Business Service

service BusinessService {
    rpc listUsers (UsersListRequest) returns (UsersListResponse);
    rpc getUser (UserRequest) returns (UserResponse);
}

message UserRequest {
    required string id = 1;
}

message UsersListRequest {
    optional int32 result_per_page = 1 [default = 10];
    optional int32 page = 2 [default = 1];
    optional string email = 3;
}

message UsersListResponse {
    repeated UserResponse users = 1;
}

message UserResponse {
    required string id = 1;
    required string email = 2;
    optional int64 dateCreated = 3;
    optional int64 dateUpdated = 4;
}